2010-06-30  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt][Symbian] Only 10 websites can be loaded consecutively when using QtWebkit 2.0
        https://bugs.webkit.org/show_bug.cgi?id=40446

        We quickly run out of memory on Symbian when loading web pages. This is
        caused by the default heap size, which is not suited for a web browser.

        This change bumps the max heap size to 32MB.

        * QtTestBrowser/QtTestBrowser.pro:

2010-06-10  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>

        Reviewed by Simon Hausmann.

        [QT][S60] build-webkit scripts picks wrong make spec for windows build
        https://bugs.webkit.org/show_bug.cgi?id=41198

        Instead of checking for existence of %EPOCROOT% on windows, mandatory use of --symbian flag for symbian builds. 

        * Scripts/webkitdirs.pm:
        (determineIsSymbian): remove check for %EPOCROOT% as one can build for windows port of QT as well

2010-06-25  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtTestBrowser does not have a "Load" button ; therefore, unable to load pages on touch only symbian devices (portrait mode).
        https://bugs.webkit.org/show_bug.cgi?id=38597

        Make the reload button act as a load button as well.

        * QtTestBrowser/mainwindow.cpp:
        (MainWindow::buildUI):
        (MainWindow::changeLocation):

2010-03-25  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed, build fix.

        [Qt] Fix QtLauncher guards.

        * QtLauncher/main.cpp:
        (LauncherWindow::showFPS):
        (LauncherWindow::updateFPS):

2010-06-02  Tasuku Suzuki  <tasuku.suzuki@nokia.com>

        Reviewed by Shinichiro Hamaji.

        [Qt] Fix compilation with QT_NO_PROPERTIES
        https://bugs.webkit.org/show_bug.cgi?id=38324

        * QtTestBrowser/main.cpp:
        (LauncherWindow::init):
