@@ -1,3 +1,15 @@
+2010-06-28  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] QtTestBrowser does not have a "Load" button ; therefore, unable to load pages on touch only symbian devices (portrait mode).
+        https://bugs.webkit.org/show_bug.cgi?id=38597
+
+        Fix behavior so reload button really acts as a load and a reload button.
+
+        * QtTestBrowser/mainwindow.cpp:
+        (MainWindow::changeLocation):
+
 2010-06-30  Simon Hausmann  <simon.hausmann@nokia.com>
 
         Reviewed by Laszlo Gombos.
